--- a/src/style-sheets/style-landing.css
+++ b/src/style-sheets/style-landing.css
@@ -109,6 +109,9 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin: 0;
+    padding: 0;
+    list-style: none;
 }
 
 .deploy-menu ul li {
@@ -139,7 +142,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: 100%;
     padding: 0 24px;
 }
 
