--- a/src/style-sheets/style-landing.css
+++ b/src/style-sheets/style-landing.css
@@ -142,7 +142,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100%;
+    height: 100vh;
     padding: 0 24px;
 }
 
