--- a/src/style-sheets/style-landing.css
+++ b/src/style-sheets/style-landing.css
@@ -474,6 +474,20 @@ body {
     transition: all 0.5s ease;
 }
 
+.loading-icon{
+    margin: 0;
+    font-size: 32px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+.loading-icon span{
+    margin: 0;
+    font-family: 'Helvetica Now Text';
+    font-size: 16px;
+}
+
 /* FOOTER */
 .footer {
     background-color: #000000;
