--- a/src/style-sheets/style-landing.css
+++ b/src/style-sheets/style-landing.css
@@ -195,7 +195,27 @@ body {
     max-width: 100%;
     min-width: 200px;
 }
+ /*Shape Divider*/
+.custom-shape-divider-bottom-1707147888 {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    overflow: hidden;
+    line-height: 0;
+    transform: rotate(180deg);
+}
 
+.custom-shape-divider-bottom-1707147888 svg {
+    position: relative;
+    display: block;
+    width: calc(221% + 1.3px);
+    height: 180px;
+}
+
+.custom-shape-divider-bottom-1707147888 .shape-fill {
+    fill: #5BFFB5;
+}
 /* WORKS */
 .works-container {
     background-color: #5BFFB5;
@@ -351,7 +371,6 @@ body {
 .about .tecnologies p {
     margin: 0;
     margin-top: 8px;
-    text-decoration: underline;
 }
 
 .about .tecnologies-container .filter {
