--- a/src/style-sheets/style-responsive.css
+++ b/src/style-sheets/style-responsive.css
@@ -20,4 +20,8 @@
         padding: 0vh 8px;
         padding-top: 7vh;
     }
+    /* WAVES */
+    .custom-shape-divider-bottom-1707147888{
+        display: none;
+    }
 }
