--- a/src/style-sheets/style-landing.css
+++ b/src/style-sheets/style-landing.css
@@ -279,6 +279,7 @@ body {
     background-color: #1A1A1A;
     color: #ffffff;
     width: 100%;
+    max-width: 460px;
     display: flex;
     justify-content: center;
     align-items: center;
